# rust_geoip_csv_variant

./: Cargo.toml  Makefile  README.md
deployment/: dynamodb.yml  migration.yml  sqs.yml
src/: error.rs  lib.rs
src/aws/: client.rs
src/dtos/: country_blocks.rs  country_location.rs  ip_request.rs  ip_response.rs  mod.rs
src/models/: geo_ip.rs  mod.rs
src/modules/: csv_parser.rs  mod.rs  sqs.rs
src/queries/: add_geo_ip.rs  get_ip.rs  mod.rs
src/utils/: api_helper.rs  dynamodb.rs  ip_helper.rs  mod.rs
