[package]
name = "geo-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[[bin]]
name = "importing"
path = "src/bin/importing.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"


[dependencies]
aws-config = "0.54"
aws-sdk-dynamodb = "0.24"
aws-sdk-s3 = "0.24"
aws-sdk-sqs = "0.24"
aws-types = "0.54"
async-trait = "0.1"
csv = "1.2"
csv-async = { version = "1.2", features = ["tokio"] }
futures = "0.3"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1"
aws-smithy-http = "0.54"
cidr = "0.2"
as_num = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
rayon = "1.6"
uuid = { version = "1", features = ["v4"] }
aws_lambda_events = { version = "0.7", default-features = false, features = ["sqs", "apigw"] }
async-stream = "0.3.3"
